# auxiliary

./: .gitmodules  CMakeLists.txt  VK.puml
ote/: CMakeLists.txt
ote/include/: CMakeLists.txt
ote/include/ote/: ote_defines.h
ote/interface/: CMakeLists.txt
ote/interface/ote/: ote_defines.h
ote/operation/: CMakeLists.txt  distortion_operation.cpp  distortion_operation.h
ote/render/: CMakeLists.txt  ImageBuffer.cpp  VkBundle.cpp  VkBundle.h  render_distortion.cpp  render_distortion.h  render_interface.cpp  render_interface.h
ote/render/shaders/: mesh.frag  mesh.vert
ote/usecase/: CMakeLists.txt  usecase_interface.cpp  usecase_interface.h
